# nightcitynavigator

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  Controls.tsx  Map.tsx  Navigation.tsx  config.tsx  main.tsx  nav_control.tsx  stateStore.ts  types.ts  valhalla.tsx  valhallaTypes.tsx
mod/: .clang-format  CMakeLists.txt  README.md
mod/cmake/: WinMsvc.cmake
mod/src/: CMakeLists.txt  app_interface.cpp  app_interface.h  main.cpp  updater.cpp  updater.h
scripts/: convert-log.sh  fakesource.py  package-mod.ps1  package-mod.sh  package-server.ps1  package-server.sh
src/: gameinterface.rs  gpslogging.rs  main.rs  types.rs
