[package]
name = "cp2077-gpsserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.22", features = ["derive"] }
proj4rs = "0.1.5"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
typeshare = "1.0.4"
